2008-03-25  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem.c: (main): Patch from Krzysztof Kotlenga
	<piernik@gmail.com> to fix a crash on an unrecognised command line.
	(Closes: #522070)

2008-03-17  Vincent Untz  <vuntz@gnome.org>

	* data/desktop.sh: end the outputted line with \n

2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/youtube/youtube.py: Change to use the "api" data view
	(meaning we don't download a load of useless HTML) and clean up the
	code to get the video URL a little.

2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/totem.ui: Add a broom icon to the "Clear Playlist" menu
	entry. (Closes: #522623)

2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem-video-indexer.c: (main):
	* src/totem-video-thumbnailer.c: (main): Convert to GIO.

2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/publish/totem-publish.c:
	(totem_publish_plugin_stream_cb), (totem_publish_plugin_media_cb):
	Convert the Publish plugin to GIO. (Closes: #512589)

2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>

	* configure.in:
	* src/plugins/tracker/totem-tracker-widget.c: (populate_result):
	Convert the Tracker plugin to GIO and remove its dependency on
	libgnomeui. (Closes: #512590)

2008-03-14  Philip Withnall  <pwithnall@svn.gnome.org>

	* configure.in:
	* src/plugins/publish/totem-publish.c:
	* src/totem-menu.c: (totem_action_add_recent),
	(on_play_dvb_activate), (add_drive_to_menu),
	(update_drive_menu_items), (on_movie_menu_select),
	(on_g_volume_monitor_event), (totem_setup_play_disc):
	* src/totem-playlist.c: (totem_playlist_mrl_to_title),
	(totem_playlist_compare_with_mount),
	(totem_playlist_clear_with_g_mount):
	* src/totem-playlist.h:
	* src/totem-private.h:
	* src/totem-uri.c: (totem_get_mount_for_uri),
	(totem_get_mount_for_media), (totem_is_special_mrl),
	(totem_create_full_path), (totem_action_on_unmount),
	(totem_setup_file_monitoring), (totem_uri_exists),